# GuardianAI

./: .gitignore  build.gradle.kts  gradle.properties  readme.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/dsatm/guardianai/: MainActivity.kt
app/src/main/java/com/example/guardianai/: MainActivity.kt
app/src/main/python/guardian_ai/audio/: redact.py
app/src/main/python/guardian_ai/image/: redact.py
app/src/main/python/guardian_ai/text/: redact.py
audio-redaction/: build.gradle.kts
audio-redaction/src/main/: AndroidManifest.xml
audio-redaction/src/main/java/com/dsatm/audio_redaction/: MainActivity.kt  RedactionManager.kt
audio-redaction/src/main/java/com/dsatm/audio_redaction/audio/: AudioConverter.kt  AudioRecorder.kt  AudioRedactionModelView.kt
audio-redaction/src/main/java/com/dsatm/audio_redaction/ui/: AudioRedactionScreen.kt
audio-redaction/src/main/java/com/dsatm/audio_redaction/viewModel/: AudioRedactionViewModel.kt
audio-redaction/src/main/java/com/dsatm/guardianai/audio/: AssemblyRedactor.kt  AudioRedactionScreen.kt
core/: build.gradle.kts
core/src/main/cpp/: CMakeLists.txt  whisper-jni.cpp
core/src/main/java/com/dsatm/core/vosk/: VoskTranscriber.kt
core/src/main/java/com/dsatm/core/whisper/: WhisperTranscriber.kt
core/src/main/java/com/dsatm/guardianai/security/: SecurityManager.kt  (+1 more)
gradle/: libs.versions.toml
image-redaction/: build.gradle.kts
ner/src/main/java/com/dsatm/ner/: BertNerOnnxManager.kt  BertTokenizer.kt  DataModels.kt  MobileBertAnalyzer.kt  NerPostProcessor.kt
text-redaction/: build.gradle.kts
(+7 files in other folders)
